<resources>

    <string name="app_name">Fusion</string>
    <string name="subtitle">Public Beta v0.83</string>
    <string name="message_box_hint">Write here.</string>
    <string name="pfUserInterfaceTitle">User Interface (UI)</string>
    <string name="theme">Theme</string>

    <string-array name="themeOptionNames">
        <item>Holo Dark</item>
        <item>Holo Light</item>
        <item>Holo Light with Dark ActionBar</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">User</string>
    <string name="pfGoogleVoiceTitle">Google Voice</string>
    <string name="Account">Account</string>
    <string name="ColoredStatus">Colored Status</string>
    <string name="ContactPicture">Contact Picture</string>
    <string name="IMServiceIcon">IM Service Icon</string>
    <string name="IMServiceIndicatorWidth">IM Service Indicator Width</string>
    <string name="Messages">Messages</string>
    <string name="Conversations">Conversations</string>
    <string name="ColoredSendIcon">Colored Send Icon</string>
    <string name="Contacts">Contacts</string>
    <string name="ShowAds">Show Ads</string>
    <string name="pfContactsListRightMargin_title">List Margin (Right)</string>
    <string name="SelectorIMService">IM Service Selector</string>
    <string name="FlashSendIconOnWrongIMService">Flash Send on Wrong Service</string>
    <string name="Warning">Warning</string>
    <string name="GVoicePermissionWarning">Fusion does not have the necessary permissions for independent push notifications.
        For the best experience, make sure the official Google Voice
        app was not installed before installing Fusion. After that,
        you may chose to install Google Voice again if you wish
        to receive voicemails and/or use it as a backup notification system.</string>
    <string name="SMSProcessingConflictHeader">Fusion has detected a potential conflict the following apps:</string>
    <string name="SMSProcessingConflictQuestion">This may cause duplicated incoming SMS messages. 
        \n\nWould you like Fusion to stop processing incoming messages (recommended)?</string>
    <string name="SMSProcessingMissing">Fusion has detected no other SMS app. 
        Would you like to Fusion to start processing incoming messages (recommended)?</string>
    <string name="BetaWarning">Thank you for testing Fusion Messenger!\n
        \nI would like to remind you that this app is still
        in beta and should be used mostly for testing purposing.         
        \n\nThere is no outgoing MMS in this build, but incoming should be fine.       
        \n\nIf this app crashes, PLEASE report the crash so I can fix it.
        \n\n-ShortFuse</string>

    <string-array name="SelectorIMServiceNames">
        <item>Show Indicator</item>
        <item>Show Text</item>
        <item>Show Both</item>
    </string-array>
    <string-array name="smsSplitLongMessageNames">
        <item>Auto</item>
        <item>Always</item>
        <item>Never</item>
    </string-array>
    <string-array name="MessageOrderNames">
        <item>Newest First</item>
        <item>Oldest First</item>
    </string-array>
    <string-array name="DismissActionNames">
        <item>Do Nothing</item>
        <item>Mark Top Message as Read</item>
        <item>Mark All as Read</item>
    </string-array>
    <string-array name="PageNavigationModes">
        <item>Hidden</item>
        <item>Title</item>
    </string-array>
    <string-array name="ContactBannerPositions">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>

    <string name="DismissAction">Dismiss Action</string>
    <string name="SplitContactsOnLandscape">Split Contacts (Landscape)</string>
    <string name="ConversationsToSync">Conversations to Sync</string>
    <string name="admob_id">a1513ab83e5b8c2</string>
    <string name="UseNotifications">Use Notifications</string>
    <string name="Notifications">Notifications</string>
    <string name="TextMessaging">Text Messaging</string>
    <string name="Enabled">Enabled</string>
    <string name="ProcessIncomingMessages">Process Incoming Messages</string>
    <string name="pfContactsMaxLines_title">Maximum Lines in Preview</string>
    <string name="pfContactsMaxLines_text">\u0020lines</string>
    <string name="pfContactsMaxLines_singleText">\u0020line</string>
    <string name="MarkAsReadOnDismiss">Mark as Read on Dismiss</string>
    <string name="SplitLongMessages">Split Long Messages</string>
    <string name="UseHardwareAcceleration">Use Hardware Acceleration</string>
    <string name="MessageOrder">Message Order</string>
    <string name="UpscaleContactPictures">Upscale Contact Pictures</string>
    <string name="SplitByContact">SplitByContact</string>
    <string name="QuickReply">Quick Reply</string>
    <string name="AdvanceAutomatically">Advance Automatically</string>
    <string name="CloseAutomatically">Close Automatically</string>
    <string name="OpenKeyboardAutomatically">Open Keyboard Automatically</string>
    <string name="PageNavigationMode">Page Navigation Mode</string>
    <string name="ContactBannerPosition">Contact Banner Position</string>
    <string name="ShowContactBanner">Show Contact Banner</string>
    <string name="OpenAutomatically">Open Automatically</string>
    <string name="ShowActionBar">Show ActionBar</string>
    <string name="WindowWidth">Window Width</string>
    <string name="WindowHeight">Window Height</string>
    <string name="Transparency">Transparency</string>
    <string name="BackgroundDimming">Background Dimming</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Ringtone">Ringtone</string>
    <string name="Capitalization">Capitalization</string>
    <string name="AutoCorrect">Auto Correct</string>
    <string name="AutoComplete">Auto Complete</string>
    <string name="EnterAsSend">Enter As Send</string>
    <string name="Multiline">Multiline</string>
    <string name="ShortMessageFeatures">Short Messsage Features</string>
    <string name="Suggestions">Suggestions</string>
    <string name="TextEntry">Text Entry</string>
    <string name="Emoticons">Emoticons</string>
    <string name="ReplaceSmileys">Replace Smileys</string>
    <string name="Settings">Settings</string>
    <string name="Search">Search</string>
    <string name="Close">Close</string>
    <string name="ManualProxySettings">Manual Proxy Settings</string>
    <string name="MMSProxyAddress">MMS Proxy Address</string>
    <string name="MMSProxyPort">MMS Proxy Port</string>
    <string name="MMSProxySettings">MMS Proxy Settings</string>
    <string name="WakeUpDevice">Wake Up Device</string>
    <string name="Info">Info</string>
    <string name="Copy">Copy</string>
    <string name="Delete">Delete</string>

    <string-array name="TextCapitalization">
        <item>None</item>
        <item>Sentences</item>
        <item>Words</item>
        <item>All</item>
    </string-array>

</resources>